[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/replay/banner.gd" type="Script" id=1]
[ext_resource path="res://fonts/ShipporiAntique-Medium.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=4]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="ReplayBanner" type="Panel"]
margin_right = 768.0
margin_bottom = 104.0
rect_min_size = Vector2( 768, 104 )
theme = SubResource( 2 )
custom_styles/panel = SubResource( 3 )
script = ExtResource( 1 )

[node name="LabelPlayer1" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -48.0
margin_right = 384.0
text = "プレイヤー名"
valign = 1

[node name="LabelPlayer2" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -384.0
margin_top = -48.0
margin_right = -8.0
grow_horizontal = 0
text = "プレイヤー名"
align = 2
valign = 1

[node name="LabelRegulation" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_right = 192.0
margin_bottom = 48.0
grow_horizontal = 2
text = "レギュレーション"
align = 1
valign = 1

[node name="LabelRound" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -72.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 48.0
grow_horizontal = 0
text = "Round 00"
align = 2
valign = 1

[node name="LabelDateTime" type="Label" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 256.0
margin_bottom = 48.0
grow_horizontal = 0
text = "date time"
valign = 1

[node name="Frame" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 4 )
